...
    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/reset_button"
        android:id="@+id/reset_puzzle_button"
        android:layout_gravity="right"
        style="?android:attr/borderlessButtonStyle" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/undo_button"
        android:id="@+id/undo_button"
        android:layout_gravity="left"
        style="?android:attr/borderlessButtonStyle" />
</FrameLayout>

