...

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_blank"
        android:name="com.example.jcdug.andnonogame.BlankFragment"
        android:id="@+id/blank_fragment"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:textSize="24sp"
        android:textColor="#000000"
...
